--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="home_box">
                 
                     <h2 class="countdown_title">Rise of Star Group</h2>
-                    <h3 class="countdown_subtitle">Dear <span id="namaTamu">today</span></h3>
+                    <h3 class="countdown_subtitle">Dear <span id="namaTamu"></span></h3>
                     <h3 class="countdown_subtitle">We're excited to invite you to the Grand Opening of Star Group!</h3>
                                                                
                     <!--begin countdown -->
