update text dan background

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <ul class="bxslider">
                     
                     <li>
-                        <img src="./lib/images/logo-white.png" alt="" width="100px"><br><br>
+                        <img src="./lib/images/logo.png" alt="" width="100px"><br><br>
                     	<h3 class="bxslider_title"><span class="lines">Rise Of <span class="font_pt_sans">Star Group</span></span></h3>
                         <p class="bxslider_text">Atas Rahmat Tuhan Yang Maha Esa, kita akan mengadakan GRAND OPENING STAR GROUP. Dimohon kehadiran Anda pada acara ini.</p>
                         <!-- <span class="separator_line"></span> -->
