--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <li>
                         <img src="./lib/images/logo.png" alt="" width="100px"><br><br>
                     	<h3 class="bxslider_title"><span class="lines">Rise Of <span class="font_pt_sans">Star Group</span></span></h3>
-                        <p class="bxslider_text">Atas Rahmat Tuhan Yang Maha Esa, kita akan mengadakan GRAND OPENING STAR GROUP. Dimohon kehadiran Anda pada acara ini.</p>
+                        <p class="bxslider_text">Thanks God, we will have a new start in our business journey. Let us celebrate together</p>
                         <!-- <span class="separator_line"></span> -->
                     </li>
                 
