update address jakarta & batu

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                         	<span><i class="fa fa-map-marker fa-3x"></i></span>
                             <p class="event_info"><span>Location</span><br>
                                 Ngagel Madya No 17, Surabaya<br>
-                                Jakarta<br>
-                                Batu</p>
+                                Hall Lt 4, Jakarta<br>
+                                Hall Cinta Lt 2 Bee Hive, Batu</p>
                         </div>
                         <!--end threecol -->
                         
